# spix-test-app

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc  swipeView.qml
